posiGen_FullsendBox/src/objects/PM_Tool__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Aging__c</fullName>
        <formula>IF(ISNULL( Activation_SD__c ),NULL, 
IF(!ISNULL( Activation_ED__c ), Activation_ED__c - Activation_SD__c, TODAY() - Activation_SD__c))</formula>
        <label>Activation Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activation_DT__c</fullName>
        <label>Activation DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <formula>IF( Project__r.RecordType.Name == &apos;PV Install&apos;,  Project__r.PVI_Activation_Date__c  , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_EDT__c</fullName>
        <label>Activation EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_ED__c</fullName>
        <formula>Activation_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activation ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activation NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activation_SDT__c</fullName>
        <label>Activation SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_SD__c</fullName>
        <formula>Activation_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activation SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation__c</fullName>
        <formula>IF( 
Activation_NA_Override__c == TRUE, 
NULL, 
IF( 
NOT( 
ISNULL( Activation_DT__c ) 
), 
2, 
IF( 
AND( 
Record_Type_Parallel_Workflow__c == &apos;NY&apos;, 
NOT( 
ISNULL( Utility_Final_Apprvl_Com_Dt_prll__c ) 
) 
), 
1, 
IF( 
AND( 
Record_Type_Parallel_Workflow__c == &apos;CT&apos;, 
NOT( 
ISNULL(Inspection_Comp_Wt_Lett_Dt_prll__c ) 
) 
), 
1, 
IF( 
AND( 
Record_Type_Parallel_Workflow__c == &apos;LA&apos;, 
NOT( 
ISNULL(Inspection_Complete_With_Letter_Date__c ) 
), 
NOT( 
ISNULL(Informed_Net_Meter_Installed_Dt_parellel__c ) 
) 
), 
1, 
0 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Project__c</fullName>
        <formula>IF( Pipeline_Stage__c == &apos;LOST&apos;, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_System_Size_Parallel__c</fullName>
        <label>Actual System Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Deal__r.Property_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aging_Since_Contract_Approved__c</fullName>
        <formula>IF(Contract_Approved_Date__c &gt; TODAY(), NULL, TODAY()- Contract_Approved_Date__c)</formula>
        <label>Aging Since Contract Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_since_Contract_Signed__c</fullName>
        <formula>IF(Contract_Signed_Date__c &gt; TODAY(), NULL, TODAY() - Contract_Signed_Date__c)</formula>
        <label>Aging since Contract Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_Stream_Reason__c</fullName>
        <formula>IF( Project__r.RecordType.Name == &apos;PV Install&apos;, TEXT(Project__r.B_Stream_Type__c) , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B-Stream Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Packet_Status__c</fullName>
        <formula>IF(Project__r.RecordType.Name == &apos;PV Install&apos;, TEXT(  Project__r.Billing_Packet_Status__c ), NULL )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Packet Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrightPath_True_Up_Completed_Parallel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BrightPath True Up Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Permit_received__c</fullName>
        <formula>IF( Project__r.RecordType.Name == &apos;PV Install&apos;,  Project__r.Building_Permit_Received_Date__c , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Permit received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Deal__r.Property_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_del__c</fullName>
        <formula>Deal__r.Property_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Call_Aging__c</fullName>
        <formula>IF(ISNULL( Closing_Call_SD__c ),NULL, 
IF(!ISNULL( Closing_Call_ED__c ), Closing_Call_ED__c - Closing_Call_SD__c, TODAY() - Closing_Call_SD__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Call Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closing_Call_Check__c</fullName>
        <formula>IF(INCLUDES( Deal__r.Touch_Milestones__c , &quot;Closing Call&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closing_Call_EDT__c</fullName>
        <label>Closing Call EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closing_Call_ED__c</fullName>
        <formula>Closing_Call_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Call ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closing_Call_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closing Call NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closing_Call_SDT__c</fullName>
        <label>Closing Call SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closing_Call_SD__c</fullName>
        <formula>Closing_Call_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Call SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closing_Call__c</fullName>
        <formula>IF( 
	Closing_Call_NA_Override__c == TRUE, NULL, 
	IF(
		Closing_Call_Check__c == TRUE,
		2,
		IF(
			OR(
				AND(EE_Accepted__c == TRUE, Activation__c == 2, Energy_Upgrade__c == 2),
				AND(EE_Accepted__c == FALSE, Activation__c == 2)
			),
			1,
			0
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_Average__c</fullName>
        <label>Completion %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Approved_Date__c</fullName>
        <formula>Deal__r.Contracts_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Date__c</fullName>
        <formula>Deal__r.Contracts_Signed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Acceptance_Received_Date__c</fullName>
        <label>Customer Acceptance Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Property__r.AssessorOwnerName1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Numeric_ID__c</fullName>
        <formula>IF(NOT(ISBLANK( Project_Manager__c )), Deal__r.Opp_Numeric_ID__c, IF(ISBLANK( Project_Manager__c ), Deal__r.Opp_Numeric_ID__c, NULL) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Numeric ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>PM Tools</relationshipLabel>
        <relationshipName>PM_Tools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EA_Approved_Date__c</fullName>
        <formula>Project_EE_Assessment__r.EE_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Project_Status_Parallel__c</fullName>
        <label>EA Project Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Rebate_Submitted_Date_Parallel__c</fullName>
        <label>EA Rebate Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_State_Application_Submitted_Date__c</fullName>
        <formula>Project_EE_Assessment__r.EA_State_Application_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA State Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_State_Approval_Submission_Aging__c</fullName>
        <formula>IF(ISNULL( EA_State_Approval_Submission_SD__c ),NULL, 
IF(!ISNULL( EA_State_Approval_Submission_ED__c  ),EA_State_Approval_Submission_ED__c - EA_State_Approval_Submission_SD__c, TODAY() - EA_State_Approval_Submission_SD__c))</formula>
        <label>EA State Approval Submission Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_State_Approval_Submission_EDT__c</fullName>
        <label>EA State Approval Submission EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_State_Approval_Submission_ED__c</fullName>
        <formula>EA_State_Approval_Submission_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA State Approval Submission ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_State_Approval_Submission_NA_Override__c</fullName>
        <formula>IF( OR(EE_Accepted__c == FALSE, EA_State_Approval_Submission_Override__c==TRUE), TRUE, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA State Approval Submission NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EA_State_Approval_Submission_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EA State Approval Submission Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EA_State_Approval_Submission_SDT__c</fullName>
        <label>EA State Approval Submission SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_State_Approval_Submission_SD_Parallel__c</fullName>
        <label>EA State Approval Submission SD Parallel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_State_Approval_Submission_SD__c</fullName>
        <formula>EA_State_Approval_Submission_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EA State Approval Submission SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_State_Approval_Submission__c</fullName>
        <formula>IF( 
	EA_State_Approval_Submission_NA_Override__c == TRUE, 
	NULL, 
	IF(
		AND(
			NOT(ISNULL( Contract_Approved_Date__c )),  
			NOT(ISNULL(EA_State_Application_Submitted_Date__c ))
		), 
		2,  
		IF(
			AND(
				Record_Type_p__c==&apos;NY&apos;,
				NOT(ISNULL(Contract_Approved_Date__c)), 
				ISNULL(EA_State_Application_Submitted_Date__c )
			), 
			1, 
			0
		) 
	) 
)</formula>
        <label>EA State Approval Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE_Accepted__c</fullName>
        <formula>Deal__r.Has_EE_as_a_Solar_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EE_Assessment_Schedule_Date__c</fullName>
        <formula>Project_EE_Assessment__r.EE_Scheduled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Assessment Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Audit_Aging__c</fullName>
        <formula>IF(ISNULL(EE_Audit_SD_Parallel__c ),NULL, 
IF(!ISNULL(EE_Audit_ED_Parallel__c ),EE_Audit_ED_Parallel__c - EE_Audit_SD_Parallel__c, TODAY() - EE_Audit_SD_Parallel__c))</formula>
        <label>EE Audit Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE_Audit_EDT__c</fullName>
        <label>EE Audit EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Audit_ED_Parallel__c</fullName>
        <label>EE Audit ED Parallel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Audit_ED__c</fullName>
        <formula>EE_Audit_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Audit ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Audit_NA_Override__c</fullName>
        <formula>IF( 
AND( 
EE_Accepted__c == FALSE, 
OR(Record_Type_p__c == &apos;NY&apos;,Record_Type_p__c == &apos;LA&apos;) 
), 
TRUE, 
NULL 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Audit NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EE_Audit_SDT__c</fullName>
        <label>EE Audit SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Audit_SD_Parallel__c</fullName>
        <label>EE Audit SD Parallel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Audit_SD__c</fullName>
        <formula>EE_Audit_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Audit SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Audit__c</fullName>
        <formula>IF( 
EE_Audit_NA_Override__c == TRUE, 
NULL, 
IF( 
AND( 
OR(Record_Type_p__c == &apos;CT&apos;,Record_Type_p__c == &apos;NY&apos;), 
EA_Project_Status_Parallel__c == &apos;Completed&apos; 
), 
2, 
IF( 
AND( 
Record_Type_p__c == &apos;LA&apos;, 
EA_Project_Status_Parallel__c == &apos;Completed&apos;, 
NOT( 
ISNULL(EA_Approved_Date__c) 
) 
), 
2, 
IF( 
EA_Project_Status_Parallel__c == &apos;Cancelled&apos;, 
2, 
IF( 
AND( 
Record_Type_p__c == &apos;CT&apos;, 
OR( Feasibility_Result_Parallel__c = &apos;Feasible&apos;, Feasibility_Result_Parallel__c = &apos;Feasible (Smaller System)&apos;, Feasibility_Result_Parallel__c = &apos;Feasible (Redeploy)&apos; ), 
NOT( 
ISNULL(Engineering_Report_Received_Date__c ) 
), 
NOT( 
ISNULL(Electrical_Permit_Received__c) 
) 
), 
1, 
IF( 
AND( 
Record_Type_p__c == &apos;NY&apos;, 
NOT( 
ISNULL(Contract_Approved_Date__c) 
), 
NOT( 
ISNULL(EA_State_Application_Submitted_Date__c) 
) 
), 
1, 
IF( 
AND( 
Record_Type_p__c == &apos;LA&apos;, 
NOT( 
ISNULL(R_P_Installed_Date__c) 
) 
), 
1, 
0 
) 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Audit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE_Lease_Payment__c</fullName>
        <formula>Deal__r.Validation_EE_Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Lease Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EU_Approved_Date__c</fullName>
        <label>EU Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Completed_Date__c</fullName>
        <formula>Deal__r.EU_Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EU Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Project_Status_Parallel__c</fullName>
        <label>EU Project Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Install_Aging__c</fullName>
        <formula>IF(ISNULL( Electrical_Install_SD_Parallel__c  ),NULL, 
IF(!ISNULL( Electrical_Install_ED__c ), Electrical_Install_ED__c - Electrical_Install_SD_Parallel__c, TODAY() - Electrical_Install_SD_Parallel__c))</formula>
        <label>Electrical Install Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Install_EDT__c</fullName>
        <label>Electrical Install EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Install_ED__c</fullName>
        <formula>Electrical_Install_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Install ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Install_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Install NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Install_SDT__c</fullName>
        <label>Electrical Install SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Install_SD_Parallel__c</fullName>
        <label>Electrical Install SD Parallel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Install_SD__c</fullName>
        <formula>Electrical_Install_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Install SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Install__c</fullName>
        <formula>IF( Electrical_Install_NA_Override__c == TRUE, NULL, IF(NOT(ISNULL( Electrical_Installed_Date__c )), 2,  IF(AND(  Record_Type_p__c  == &apos;NY&apos;, NOT( 
ISNULL(State_Program_Application_Approved_Date__c)) , NOT(ISNULL( NMIA_Received_Date__c )), OR(NOT(ISNULL( Building_Permit_received__c )),NOT(ISNULL( Electrical_Permit_Received__c )))), 1,  IF(AND(Record_Type_p__c == &apos;LA&apos;, NOT(ISNULL( R_P_Installed_Date__c )) ), 1,  IF(AND(Record_Type_p__c == &apos;CT&apos;, NOT(ISNULL( R_P_Installed_Date__c ))), 1,  0) ) ) ) )</formula>
        <label>Electrical Install</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Installed_Date__c</fullName>
        <formula>IF( Project__r.RecordType.Name == &apos;PV Install&apos;,  Project__r.PVI_Electrical_Installed_Date__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Received__c</fullName>
        <label>Electrical Permit Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Deal__r.Account_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Upgrade_Aging__c</fullName>
        <formula>IF(ISNULL( Energy_Upgrade_SD__c ),NULL, 
IF(!ISNULL( Energy_Upgrade_ED__c ), Energy_Upgrade_ED__c - Energy_Upgrade_SD__c, TODAY() - Energy_Upgrade_SD__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy Upgrade Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Energy_Upgrade_EDT__c</fullName>
        <label>Energy Upgrade EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Upgrade_ED__c</fullName>
        <formula>Energy_Upgrade_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy Upgrade ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Upgrade_NA_Override__c</fullName>
        <formula>IF( EE_Accepted__c == FALSE, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy Upgrade NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Energy_Upgrade_SDT__c</fullName>
        <label>Energy Upgrade SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Upgrade_SD__c</fullName>
        <formula>Energy_Upgrade_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy Upgrade SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Upgrade__c</fullName>
        <formula>IF( 
Energy_Upgrade_NA_Override__c == TRUE, 
NULL, 
IF( 
AND( 
OR(Record_Type_p__c == &apos;CT&apos;,Record_Type_p__c == &apos;NY&apos;), 
NOT( 
ISNULL( EU_Completed_Date__c ) 
) 
), 
2, 
IF( 
AND( 
Record_Type_p__c == &apos;LA&apos;, 
NOT( 
ISNULL(EU_Completed_Date__c) 
), 
NOT( 
ISNULL(EU_Approved_Date__c) 
) 
), 
2, 
IF( 
EU_Project_Status_Parallel__c == &apos;Cancelled&apos;, 
2, 
IF( 
AND( 
Record_Type_p__c == &apos;NY&apos;, 
NOT( 
ISNULL(R_P_Installed_Date__c) 
), 
EA_Project_Status_Parallel__c = &apos;Completed&apos;, 
NOT( 
ISNULL(EA_State_Application_Submitted_Date__c) 
), 
NOT( 
ISNULL(Work_Scope_Approved__c) 
) 
), 
1, 
IF( 
AND( 
OR(Record_Type_p__c == &apos;LA&apos;,Record_Type_p__c == &apos;CT&apos;), 
EA_Project_Status_Parallel__c = &apos;Completed&apos; 
), 
1, 
0 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy Upgrade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engineering_Report_Received_Date__c</fullName>
        <formula>IF(  Project_PV_Feasibility__r.RecordType.Name == &apos;PV Feasibility&apos;,  Project__r.Engineering_Report_Received_Date__c  , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering Report Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engineering_Report_Requested_Date__c</fullName>
        <formula>IF(  Project_PV_Feasibility__r.RecordType.Name == &apos;PV Feasibility&apos;,   Project_PV_Feasibility__r.Engineering_Report_Requested_Date__c  , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering Report Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feasibility_Aging__c</fullName>
        <formula>IF(ISNULL( Feasibility_SD_Parallel__c ),NULL, 
IF(!ISNULL( Feasibility_ED_Parallel__c ), Feasibility_ED_Parallel__c - Feasibility_SD_Parallel__c, TODAY() - Feasibility_SD_Parallel__c))</formula>
        <label>Feasibility Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feasibility_EDT__c</fullName>
        <label>Feasibility EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feasibility_ED_Parallel__c</fullName>
        <label>Feasibility ED Parallel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feasibility_ED__c</fullName>
        <formula>Feasibility_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feasibility ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feasibility_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feasibility NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feasibility_Project_Status_Installation__c</fullName>
        <label>Feasibility Project Status Installation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feasibility_Project_Status_Parallel__c</fullName>
        <label>Feasibility Project Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feasibility_Result_Parallel__c</fullName>
        <label>Feasibility Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feasibility_SDT__c</fullName>
        <label>Feasibility SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feasibility_SD_Parallel__c</fullName>
        <label>Feasibility SD Parallel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feasibility_SD__c</fullName>
        <formula>Feasibility_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feasibility SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feasibility__c</fullName>
        <formula>IF( 
	Feasibility_NA_Override__c == TRUE, 
	NULL, 
		IF(
			AND(
				OR( Feasibility_Result_Parallel__c == &apos;Feasible&apos;,Feasibility_Result_Parallel__c == &apos;Feasible (Smaller System)&apos;,Feasibility_Result_Parallel__c == &apos;Feasible (Redeploy)&apos;),
				Deal__r.RecordType.Name &lt;&gt; &apos;Sunrun&apos;,
				PV_Install_Status__c!=null 
				
			), 
		2, 
		IF(
			AND( 
				Feasibility_Result_Parallel__c == &apos;Not Feasible&apos;, 
				OR(Feasibility_Project_Status_Parallel__c == &apos;Completed&apos; , Feasibility_Project_Status_Parallel__c == &apos;Cancelled&apos;)
			), 
			2, 
			IF(
				AND( 
					OR(Feasibility_Result_Parallel__c == &apos;Feasible&apos;,Feasibility_Result_Parallel__c == &apos;Feasible (Smaller System)&apos;, Feasibility_Result_Parallel__c == &apos;Feasible (Redeploy)&apos; ), 
					Deal__r.RecordType.Name = &apos;Sunrun&apos;, 
					BrightPath_True_Up_Completed_Parallel__c == TRUE
				), 
				2,
				IF(Intro_Call__c == TRUE, 
					1,
					0
				)
			)
			
		)
	)
)</formula>
        <label>Feasibility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feasibility_result_call__c</fullName>
        <formula>IF(INCLUDES( Deal__r.Touch_Milestones__c , &quot;Feasibility Result Call&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feasibility result call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Verification_Completed_Date__c</fullName>
        <formula>IF( Project_PV_Feasibility__r.RecordType.Name == &quot;PV Feasibility&quot;,   Project_PV_Feasibility__r.Field_Verification_Completed_Date__c , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Verification Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IU_Approval_Net_Metering_ED_Parallel__c</fullName>
        <label>IU Approval/Net Metering ED Parallel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Informed_Net_Meter_Installed_Date__c</fullName>
        <formula>IF( Project__r.RecordType.Name == &apos;PV Install&apos;, Project__r.Informed_Net_Meter_Installed_Date__c , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Informed Net Meter Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Informed_Net_Meter_Installed_Dt_parellel__c</fullName>
        <label>Informed Net Meter Installed Dt parellel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Utility_Approval_Net_MeteringEDT__c</fullName>
        <label>Initial Utility Approval/Net MeteringEDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Utility_Approval_Net_MeteringSDT__c</fullName>
        <label>Initial Utility Approval/Net MeteringSDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Utility_Approval_Net_Metering_Ag__c</fullName>
        <formula>IF(ISNULL( Initial_Utility_Approval_Net_Metering_Pa__c  ),NULL, 
IF(!ISNULL( IU_Approval_Net_Metering_ED_Parallel__c ), IU_Approval_Net_Metering_ED_Parallel__c - Initial_Utility_Approval_Net_Metering_Pa__c, TODAY() - Initial_Utility_Approval_Net_Metering_Pa__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IUApproval/Net Metering Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Utility_Approval_Net_Metering_ED__c</fullName>
        <formula>Initial_Utility_Approval_Net_MeteringEDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Utility Approval/Net Metering ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Utility_Approval_Net_Metering_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Utility Approval/Net Metering NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Utility_Approval_Net_Metering_Pa__c</fullName>
        <label>Initial Utility Approval/Net Metering Pa</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Utility_Approval_Net_Metering_SD__c</fullName>
        <formula>Initial_Utility_Approval_Net_MeteringSDT__c</formula>
        <label>Initial Utility Approval/Net Metering SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Utility_Approval_Net_Metering__c</fullName>
        <formula>IF( 
Initial_Utility_Approval_Net_Metering_NA__c==TRUE, 
NULL, 
IF( 
AND( 
OR(Record_Type_p__c==&apos;NY&apos;,Record_Type_p__c==&apos;CT&apos;), 
NOT( 
ISNULL(NMIA_Received_Date__c) 
) 
), 
2, 
IF( 
AND( 
Record_Type_p__c==&apos;LA&apos;, 
NOT( 
ISNULL(Net_Meter_Installed_Verified_Date__c) 
) 
), 
2, 
IF( 
AND( 
OR(Record_Type_p__c==&apos;NY&apos;,Record_Type_p__c==&apos;CT&apos;), 
OR(Feasibility_Result_Parallel__c==&apos;Feasible&apos;,Feasibility_Result_Parallel__c==&apos;Feasible (Smaller System)&apos;,Feasibility_Result_Parallel__c==&apos;Feasible (Redeploy)&apos;), 
PV_Install_Status__c!=null 
), 
1, 
IF( 
AND( 
Record_Type_p__c==&apos;LA&apos;, 
OR(Utility_Parallel__c&lt;&gt;&apos;Entergy New Orleans&apos;,Utility_Parallel__c&lt;&gt;&apos;Entergy Louisiana&apos;), 
NOT( 
ISNULL(Electrical_Installed_Date__c) 
) 
), 
1, 
IF( 
AND( 
Record_Type_p__c==&apos;LA&apos;, 
OR(Utility_Parallel__c==&apos;Entergy New Orleans&apos;,Utility_Parallel__c==&apos;Entergy Louisiana&apos;),  
OR(Feasibility_Result_Parallel__c==&apos;Feasible&apos;,Feasibility_Result_Parallel__c==&apos;Feasible (Smaller System)&apos;,Feasibility_Result_Parallel__c==&apos;Feasible (Redeploy)&apos;),
PV_Install_Status__c!=null 
), 
1, 
0 
) 
) 
) 
) 
) 
)</formula>
        <label>Initial Utility Approval/Net Metering</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inspection_Comp_Wt_Lett_Dt_prll__c</fullName>
        <label>Inspection Comp Wt Lett Dt prll</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Complete_With_Letter_Date__c</fullName>
        <formula>IF( Project__r.RecordType.Name == &apos;PV Install&apos;,  Project__r.Inspection_Complete_With_Letter_Date__c  , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Complete With Letter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Requested_Date__c</fullName>
        <formula>IF( Project__r.RecordType.Name == &apos;PV Install&apos;,  Project__r.Inspection_Requested_Date__c  , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intro_Call_Aging__c</fullName>
        <formula>IF(ISNULL( Intro_Call_SD__c  ),NULL, 
IF(!ISNULL( Intro_Call_ED__c  ),Intro_Call_ED__c - Intro_Call_SD__c, TODAY() - Intro_Call_SD__c))</formula>
        <label>Intro Call Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intro_Call_EDT__c</fullName>
        <label>Intro Call EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intro_Call_ED__c</fullName>
        <formula>Intro_Call_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intro Call ED</label>
        <type>Date</type>
    </fields>
</CustomObject>